# Guardian-Plex

./: Cargo.toml
src/: client.rs  config.rs  main.rs
src/commands/: invite.rs  mod.rs  profile.rs  queue.rs  register.rs  remove.rs  setchannel.rs  setrole.rs  setup.rs
src/db/: postgres.rs  redis.rs
src/entities/: plex.rs
src/events/: mod.rs
src/handler/: plex.rs
