[package]
name = "rust-plex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
redis = {version ="0.22.1", features = ["tokio-comp", "connection-manager"]}
tokio = "1.23.0"
tracing = "0.1.37"
dotenvy = "0.15.6"
tracing-subscriber = "0.3.16"
serde_json = "1.0"
migration = { path = "migration" }
envconfig = "0.10.0"

[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sea-orm-migration]
version = "^0.10.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
]